--- a/Jenkins/test-output/old/Suite/reporter-output.html
+++ b/Jenkins/test-output/old/Suite/reporter-output.html
@@ -1,3 +1,4 @@
 <h2>Reporter output</h2><table><tr><td>hiii</td></tr>
-<tr><td>welcome,true</td></tr>
+<tr><td>welcome</td></tr>
+<tr><td>hiiiii</td></tr>
 </table>
